--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ python_version = '3.11'
 [packages]
 google-cloud-storage='==2.9.0'
 google-cloud-speech='==2.20.0'
-python-telegram-bot='==20.3'
+python-telegram-bot={extras=["webhooks"], version='==20.3'}
 
 [dev-packages]
 pytest='==7.2.1'
