Add e2e test image, add cancel operation

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  IMAGE_TAG: ${{ secrets.GCP_ARTIFACT_REGISTRY }}/me/bot:${{ github.ref_name }}-${{ github.sha }}
+  BOT_IMAGE_TAG: ${{ secrets.GCP_ARTIFACT_REGISTRY }}/bot/bot:${{ github.ref_name }}-${{ github.sha }}
+  E2E_IMAGE_TAG: bot/e2e:${{ github.ref_name }}-${{ github.sha }}
 
 jobs:
   build:
@@ -25,20 +26,25 @@ jobs:
       - name: 'Prepare Local Workspace'
         run: touch .env
 
-      - name: Build Docker Image
-        id: build
-        run: |
-          make image-build IMAGE_TAG=${IMAGE_TAG}
+      - name: Build Bot Image
+        run: make bot-image-build BOT_IMAGE_TAG=${BOT_IMAGE_TAG}
 
-      - name: Test Docker Image
-        run: make image-test IMAGE_TAG=${IMAGE_TAG}
+      - name: Test Bot Image
+        run: make bot-image-test BOT_IMAGE_TAG=${BOT_IMAGE_TAG}
+
+      - name: Build e2e Image
+        run: make bot-image-build E2E_IMAGE_TAG=${E2E_IMAGE_TAG}
+
+      - name: Test e2e Image
+        run: make e2e-image-test E2E_IMAGE_TAG=${E2E_IMAGE_TAG}
 
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-      - name: Push Docker Image
+      - name: Push Bot Image
+        id: bot-push-image
         run: |
           make podman-login GCP_ARTIFACT_REGISTRY=${{ secrets.GCP_ARTIFACT_REGISTRY }}
           make image-push IMAGE_TAG=${IMAGE_TAG}
@@ -46,7 +52,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: build
+    needs: bot-push-image
     environment: ${{ github.ref_type == 'tag' && 'prod' || 'staging' }}
 
     steps:
@@ -69,5 +75,27 @@ jobs:
           TF_VAR_gcp_sa_credentials: ${{ steps.auth.outputs.credentials_file_path  }}
           TF_VAR_gcp_project_name: ${{ secrets.TF_VAR_gcp_project_name }}
           TF_VAR_telegram_token: ${{ secrets.TF_VAR_telegram_token }}
-          TF_VAR_bot_image: ${{ env.IMAGE_TAG }}
+          TF_VAR_bot_image: ${{ env.BOT_IMAGE_TAG }}
         run: make app-tf-init app-tf-plan app-tf-apply
+
+  e2e:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: build
+    environment: ${{ github.ref_type == 'tag' && 'prod' || 'staging' }}
+
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: 'Prepare Local Workspace'
+        run: touch .env
+
+      - name: Run e2e
+        env:
+          TELEGRAM_APP_ID: ${{ secrets.E2E_TELEGRAM_APP_ID }}
+          TELEGRAM_APP_HASH: ${{ secrets.E2E_TELEGRAM_APP_HASH }}
+          TELEGRAM_APP_SESSION: ${{ secrets.E2E_TELEGRAM_APP_SESSION }}
+          UTRUST_BOT_NAME: ${{ secrets.E2E_UTRUST_BOT_NAME }}
+        run: make e2e-image-run E2E_IMAGE_TAG=${E2E_IMAGE_TAG}
