--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -120,10 +120,11 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CI_CD_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_CI_CD_BOT_TOKEN }}
+          format: markdown
           message: |
-            Repository: ${{ github.repository }}
-            Commit message: ${{ github.event.commits[0].message }}
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+            Repository: [${{ github.repository }}](https://github.com/${{ github.repository }})
+            Commit message: [${{ github.event.commits[0].message }}](https://github.com/${{ github.repository }}/commit/${{github.sha}})
+            Run: [${{ github.workflow }}](https://github.com/zifter/u-trust-bot/actions/runs/${{ github.workflow_run_id }})
 
             Build - ${{ needs.build.result }}
             Deploy - ${{ needs.deploy.result }}
