Add GCP registry

--- a/.github/workflows/gcr-cleaner.yaml
+++ b/.github/workflows/gcr-cleaner.yaml
@@ -12,6 +12,7 @@ jobs:
       - name: Login to GAR
         uses: docker/login-action@v2
         with:
+          registry: ${{ secrets.GCP_ARTIFACT_REGISTRY }}
           username: _json_key
           password: ${{ secrets.GOOGLE_CREDENTIALS }}
 
