--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
       - main
   release:
     types: [published]
+  workflow_dispatch:
 
 concurrency:
   group: ci-deployment-${{ github.ref }}
