--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ google-cloud-datastore='==2.21.0'
 google-cloud-ndb='==2.3.4'
 python-telegram-bot={extras=["webhooks"], version='==22.5'}
 six='==1.17.0'
+python-json-logger="==2.0.7"
 
 [dev-packages]
 pytest='==8.4.2'
