Add JSON logger configuration and fix terraform in CI pipeline - Add python-json-logger dependency to Pipfile - Create utils/logger.py with JSON formatter setup - Update main.py to use JSON logging - Add UTRUST_LOG_LEVEL environment variable support - Fix terraform installation in GitHub Actions deploy job

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,6 +64,11 @@ jobs:
       - name: 'Prepare Local Workspace'
         run: touch .env
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.5.0"
+
       - name: 'Authenticate to Google Cloud'
         id: 'auth'
         uses: 'google-github-actions/auth@v1'
