Fix pytest stdin capture issue - Add -s flag to disable output capture in pytest.ini files - Add --tb=short for concise traceback output - Resolves 'reading from stdin while output is captured' error in e2e tests with Telethon

--- a/e2e/pytest.ini
+++ b/e2e/pytest.ini
@@ -1,5 +1,6 @@
 # pytest.ini
 [pytest]
 asyncio_mode=auto
+addopts = -s --tb=short
 markers =
     e2e: all tests are end-to-end and requires core-backend API
